# blobby.qml

./: .gitignore  CMakeLists.txt  README.md  devenv.nix  flake.nix
src/: blobgroup.cpp  blobgroup.h  blobinvertedrect.cpp  blobinvertedrect.h  blobmaterial.cpp  blobmaterial.h  blobrect.cpp  blobrect.h  blobshape.cpp  blobshape.h  plugin.cpp  plugin.h  qmldir
src/shaders/: blob.frag  blob.vert
test/: test_shell.qml
